test/TestPhases/parser/invalid/stringunicode.blc
@[CFunction (binding ="""do not z allow🔥 this def
                        	asdf
                    """, 
             header = "<c-function>.h")]
extern function f()

@[EntryPoint]
activity Main () ()
    bla()
	 e()
    ⛑f()
	// 🔥g()
	// await				true
    // h()
    await true
end